added prestart script to display a start message

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Course Project for Cory House's React and Redux Pluralsight course",
   "scripts": {
+    "prestart": "babel-node tools/startMessage.js",
     "start": "babel-node tools/srcServer.js"
   },
   "author": "Carol  St. Louis",
