--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Course Project for Cory House's React and Redux Pluralsight course",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
-    "start": "babel-node tools/srcServer.js"
+    "start": "npm-run-all --parallel open:src lint:watch",
+    "open:src": "babel-node tools/srcServer.js",
+    "lint": "node_modules/.bin/esw webpack.config.* src tools",
+    "lint:watch": "npm run lint -- --watch"
   },
   "author": "Carol  St. Louis",
   "license": "MIT",
@@ -24,6 +27,7 @@
   "devDependencies": {
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "6.2.4",
     "babel-plugin-react-display-name": "2.0.0",
     "babel-preset-es2015": "6.6.0",
