--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,8 @@
     "no-empty-label":0,
     "space-after-keywords": 0, 
     "space-return-throw-case": 0,
+    "no-labels": 1,
+    "keyword-spacing": 1,
     "quotes": 0,
     "no-console": 1,
     "no-debugger": 1,
